Fix about dark flow seam overlap

--- a/assets/scss/pages/_about-page.scss
+++ b/assets/scss/pages/_about-page.scss
@@ -6,11 +6,19 @@
 
 .about-dark-flow {
   position: relative;
+  z-index: 90;
   overflow: visible;
+  margin-top: #{mixins.vw(-90px)};
+  padding-top: #{mixins.vw(90px)};
   --about-dark-flow-background: #000102;
   --about-dark-flow-background-mobile: #000102;
   background: var(--about-dark-flow-background);
-  background: var(--about-dark-flow-background-mobile);
+
+  @include mixins.mobile {
+    margin-top: #{mixins.mvw(-40px)};
+    padding-top: #{mixins.mvw(40px)};
+    background: var(--about-dark-flow-background-mobile);
+  }
 }
 
 .about-hero {
